--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   background-color: #3c3c3c;
   margin: 40px;
   padding-top: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .product-title {
@@ -63,6 +65,8 @@
   background-color: #3c3c3c;
   border: 1px solid #000;
   color: #fff;
+  margin: 20px;
+  width: 80%;
 }
 
 .search-bar:hover {
