--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 .card-style {
-  text-align: center;
-  border-radius: 10px;
   background-color: #3c3c3c;
-  margin: 40px;
-  padding-top: 10px;
   display: flex;
   flex-direction: column;
+  margin-top: 15px;
+  text-align: center;
 }
 
-.product-title {
+#product-title {
   font-size: 18px;
   font-weight: bold;
+  background-color: #3c3c3c;
+  border: none;
 }
 
 .product-price {
@@ -27,10 +27,10 @@
 }
 
 .card-img {
-  box-sizing: content-box;
-  max-width: fit-content;
-  max-height: fit-content;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
+  background-image: url("https://cdn.onlinewebfonts.com/svg/img_357713.png");
 }
 
 .hide-form {
@@ -65,8 +65,6 @@
   background-color: #3c3c3c;
   border: 1px solid #000;
   color: #fff;
-  margin: 20px;
-  width: 80%;
 }
 
 .search-bar:hover {
@@ -82,4 +80,11 @@
 
 .search-bar-input {
   width: 400px;
+}
+
+.header {
+  background-color: #454545;
+  text-align: center;
+  color: #fff;
+  padding: 5px;
 }
