--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 15px;
+  margin-bottom: 15px;
   text-align: center;
 }
 
@@ -87,4 +88,13 @@
   text-align: center;
   color: #fff;
   padding: 5px;
+}
+
+.floatting-button {
+  font-size: 60px;
+}
+
+.floatting-button:hover {
+  color: #5489c2;
+  transition: 1s;
 }
