--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
+:root {
+  --dark-grey: #3c3c3c;
+  --light-grey: #454545;
+  --dark-blue: #375a7f;
+  --light-blue: #5489c2;
+}
+
 /* ################ CARD STYLE ################ */
 
 .card-style {
-  background-color: #3c3c3c;
+  background-color: var(--dark-grey);
   display: flex;
   flex-direction: column;
   margin-top: 15px;
@@ -12,7 +19,7 @@
 #product-title {
   font-size: 18px;
   font-weight: bold;
-  background-color: #3c3c3c;
+  background-color: var(--dark-grey);
   border: none;
 }
 
@@ -33,13 +40,13 @@
 /* ################ SEARCH BAR ################ */
 
 .search-bar {
-  background-color: #3c3c3c;
+  background-color: var(--dark-grey);
   border: 1px solid #000;
   color: #fff;
 }
 
 .search-bar:hover {
-  background-color: #454545;
+  background-color: var(--light-grey);
   border: 1px solid #000;
   color: #fff;
 }
@@ -54,12 +61,12 @@
 
 .floatting-button-container a {
   text-decoration: none;
-  color: #375a7f;
+  color: var(--dark-blue);
 }
 
 .floatting-button-container a:hover {
   text-decoration: none;
-  color: #375a7f;
+  color: var(--dark-blue);
 }
 
 .floatting-button {
@@ -67,14 +74,14 @@
 }
 
 .floatting-button:hover {
-  color: #5489c2;
+  color: var(--light-blue);
   transition: 1s;
 }
 
 /* ################ HEADER ################ */
 
 .header {
-  background-color: #454545;
+  background-color: var(--light-grey);
   text-align: center;
   color: #fff;
   padding: 5px;
